--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -153,19 +153,21 @@
   flex: 1;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   min-width: 0;
 }
 
 .navbar-nav {
   list-style: none;
   display: flex;
-  gap: 0.3rem;
+  gap: 0;
   margin: 0;
   padding: 0;
   align-items: center;
   flex-wrap: nowrap;
   flex: 1;
+  justify-content: space-evenly;
+  width: 100%;
 }
 
 .nav-item {
@@ -230,7 +232,7 @@
 }
 
 .navbar-right {
-  display: flex;
+  display: none;
   align-items: center;
   gap: 0.5rem;
 }
@@ -428,6 +430,7 @@
     align-items: stretch;
     width: 100%;
     gap: 0.7rem;
+    justify-content: flex-start;
   }
 
   .nav-item-theme {
@@ -450,6 +453,10 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
+  }
+
+  .navbar-right {
+    display: flex;
   }
 }
 
