--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -52,7 +52,7 @@
   background-size: cover;
   background-position: right center;
   background-repeat: no-repeat;
-  filter: saturate(0.92) brightness(0.65);
+  filter: saturate(0) brightness(0.65) contrast(1.05);
   transform: scale(1.05);
   animation: heroZoom 22s ease-in-out infinite;
 }
